# CarGame

./: .gitignore  CMakeLists.txt  audio.cpp  audio.h  camera.cpp  camera.h  convert.cpp  convert.h  font.cpp  input.cpp  input.h  main.cpp  main_game.cpp  main_game.h  model.cpp  model.h  physics.cpp  physics.h  player.cpp  player.h  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h  todo.md  vehicle.cpp  vehicle.h  world.cpp  world.h
data/: car.json  car2.json
data/models/: map1.blend  mycar.gltf  no_tex_map.blend  no_tex_map.gltf  racetrack1.blend  racetrack1.gltf  racetrack2.gltf  silvia_s13_ver2.blend  silvia_s13_ver2.gltf  silvia_wheel.gltf  simple_map.glb  simple_map.gltf  simple_map2.gltf
glad/: glad.c  glad.h
models/: map1.blend  map1.gltf  monkey.mtl  mycar.gltf  no_tex_map.blend  no_tex_map.gltf  quad.gltf  racetrack1-2.blend  silvia_s13_ver2.gltf  simple_map.blend  simple_map.blend1  simple_map.gltf  wheel.gltf
shaders/: f_samplerarray_test.glsl  f_screen.glsl  f_screen_raw.glsl  f_simple_depth.glsl  f_text.glsl  f_ui.glsl  fragment.glsl  v_skybox.glsl  v_ui.glsl  vertex.glsl
src/: audio.cpp  audio.h  camera.cpp  camera.h  convert.h  font.cpp  font.h  glerr.h  input.cpp  input.h  input_mapping.cpp  input_mapping.h  main_game.cpp  main_game.h  model.cpp  model.h  options.cpp  options.h  physics.cpp  physics.h  player.cpp  player.h  render.cpp  render.h  render_defines.h  render_internal.cpp  render_internal.h  render_lights.cpp  render_lights.h  render_shaders.h  render_shadow.cpp  render_shadow.h  render_ui.cpp  render_ui.h  shader.cpp  shader.h  texture.cpp  texture.h  ui.cpp  ui.h  (+6 more)
